Sun Nov  5 19:16:57 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * DAnCE/NodeApplicationManager/Containers_Info_Map.cpp:
          Removed the use of STL iostream.
          Use ACE DLL decorator, prefix, suffix for DLL file names.
          
        * DAnCE/RepositoryManager/PC_Updater.cpp:
        * DAnCE/RepositoryManager/RepositoryManager_Impl.cpp:
        * DAnCE/RepositoryManager/RMadmin.cpp:
          Removed the use of STL iostream.

Fri Nov  3 03:03:24 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * DAnCE/NodeApplicationManager/Containers_Info_Map.cpp
        * DAnCE/RepositoryManager/PC_Updater.cpp
          Modified these files to differentiate the location field of
          deploymentplan for different platforms.

Thu Nov  2 22:54:12 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServnatSourceGenerator.cpp:

          Added generation of code to register eventtype factories with
          the container ORB for components with publish and emit ports
          (generation of such registration for components with consume
          ports already existed). This additional registration is necessary
          if the component sends an event using a CIAO Event Service
          event channel that is collocated with it.

Thu Nov  2 20:22:46 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * DAnCE/tests/NodeApplicationTest/NodeApp_test_client.cpp (main):
        * DAnCE/tests/NodeApplicationTest/NodeApp_test_client_simple.cpp (main):
        * DAnCE/tests/NodeApplicationTest/NodeApp_test_client_dynamic.cpp (main):
        * DAnCE/tests/NodeApplicationTest/NodeApp_test_client_ex.cpp:
        * DAnCE/NodeManager/Node_Manager.cpp (main): Replaced exit() with
          ACE_OS::exit().  Thanks to Abdul Sowayan for reporting this.

Mon Oct 30 19:13:03 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL3/Events/Any/EventAny.idl:
        * tests/IDL3/Events/Any/Any.mpc: